--- a/Web/style.css
+++ b/Web/style.css
@@ -92,10 +92,11 @@ p {
 }
 
 table{
-  margin: 20px 40px;
+  margin: 10px 20px;
   border-collapse: collapse;
   border-spacing: 0;
-  width: 100%;
+  width: 75%;
   border: 1px solid #ddd;
   text-align: center;
+  color: white;
 }
